<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Super Seeker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_title">TitleActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="title_activity_new_game_activity2">NewGameActivity2</string>
    <string name="title_activity_play_game">PlayGameActivity</string>
    <string name="title_activity_game_screen">GameScreenActivity</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="title_activity_new_game_">NewGame_Activity</string>
    <string name="title_activity_play_game_">PlayGame_Activity</string>
    <string name="title_activity_game_screen_">GameScreen_Activity</string>
    <string name="title_activity_end_game_">EndGame_Activity</string>
    <string name="title_activity_account_created_">AccountCreated_Activity</string>
    <string name="title_activity_account_screen_">AccountScreen_Activity</string>
    <string name="title_activity_add_friend_">AddFriend_Activity</string>
    <string name="title_activity_credits_">Credits_Activity</string>
    <string name="title_activity_edit_account_">EditAccount_Activity</string>
    <string name="title_activity_friend_">Friend_Activity</string>
    <string name="title_activity_invite_">Invite_Activity</string>
    <string name="title_activity_new_account_">NewAccount_Activity</string>
    <string name="title_activity_players_">Players_Activity</string>
    <string name="title_activity_sign_in_">SignIn_Activity</string>
    <string name="title_activity_lose_">Lose_Activity</string>
    <string name="title_activity_win_">Win_Activity</string>
    <string name="signin_failure">Failed to sign in.</string>

    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="game_title">Super Seeker!</string>
    <string name="game_blurb">Hello! Welcome to Super Seeker. To play, sign in with Google by clicking the button below.</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="host_instructions">Find the other players!</string>
    <string name="player_instructions">Wait to see if the seeker can find you!</string>
    <string name="hiding_player_instructions">Time to hide!</string>
    <string name="hiding_host_instructions">Wait while the other players hide.</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is inviting you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>

</resources>
