<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ff313131"
    tools:context="com.example.superseeker.TitleActivity"
    android:orientation="vertical">

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="140dp"
            android:id="@+id/superSeekerText"
            android:background="@drawable/super_seeker_text"
            android:baselineAlignBottom="false"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />

        <TextView style="@style/GameBlurb"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
            style="@style/SignInButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="140dp"
            android:id="@+id/imageView3"
            android:background="@drawable/super_seeker_text"
            android:baselineAlignBottom="false"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:id="@+id/imageView4"
            android:background="#ffc4c4c4"
            android:layout_marginBottom="20dp" />

        <Button android:id="@+id/button_invite_players"
            style="@style/MainScreenButton"
            android:text="@string/invite_players"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/invite_players_explanation"
            android:layout_gravity="center_horizontal" />
        <Button android:id="@+id/button_see_invitations"
            style="@style/MainScreenButton"
            android:text="@string/see_invitations"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal" />
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="@string/see_invitations_explanation"
            android:layout_gravity="center_horizontal" />
        <Button android:id="@+id/button_sign_out"
            style="@style/SignOutButton"
            android:text="@string/sign_out"
            android:textSize="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />
    </LinearLayout>

    <!-- INVITATION POPUP -->

    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait"
            android:textSize="30dp"
            android:textStyle="italic" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/screen_hide"
        style="@style/LLScreen"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="#ff8e8e8e">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SUPER SEEKER"
                android:id="@+id/textView5"
                android:layout_gravity="center"
                android:textColor="@color/AccentColor"
                android:textSize="25dp"
                android:textStyle="italic" />
        </FrameLayout>

        <TextView
            style="@string/hiding_host_instructions"
            android:id="@+id/hidingInstructions"
            android:text="@string/hiding_host_instructions"
            android:textStyle="italic"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffdedede"
            android:layout_weight="1" />

        <TextView
            style="@style/FigureLabel"
            android:id="@+id/hideCountdown"
            android:text="0:00"
            android:textColor="#ffffffff"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40dp" />

    </LinearLayout>

    <LinearLayout android:id="@+id/screen_game" style="@style/LLScreen">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:background="#ff8e8e8e">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SUPER SEEKER"
                android:id="@+id/textView6"
                android:layout_gravity="center"
                android:textColor="@color/AccentColor"
                android:textSize="25dp"
                android:textStyle="italic" />
        </FrameLayout>

        <TextView android:id="@+id/instructions"
            style="@string/host_instructions" android:text="@string/host_instructions"
            android:textStyle="italic"
            android:textSize="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffdedede" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_weight="1">

            <TextView android:id="@+id/my_score" style="@style/ScoreDisplay"
                android:text="0 / 0"
                android:layout_gravity="center_vertical" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="1" />

            <TextView android:id="@+id/countdown" style="@style/FigureLabel"
                android:text="0:00"
                android:textColor="#ffffffff"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout style="@style/ScoresBox"
            android:padding="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView android:id="@+id/p2name" style="@style/ScoreText"
                    android:text="Player 2"
                    android:layout_gravity="center_vertical|right" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/p2color"
                    android:layout_gravity="right"
                    android:background="#ffff524e" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp">

                <TextView android:id="@+id/p3name" style="@style/ScoreText"
                    android:text="Player 3"
                    android:layout_gravity="center_vertical" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/p3color"
                    android:background="#fff55a55" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp">

                <TextView android:id="@+id/p4name" style="@style/ScoreText"
                    android:text="Player 4"
                    android:layout_gravity="center_vertical" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/p4color"
                    android:background="#fff55a55" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:visibility="visible" >

                <TextView
                    style="@style/ScoreText"
                    android:id="@+id/p5name"
                    android:text="Player 5"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/p5color"
                    android:background="#fff57672" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:visibility="visible">

                <TextView android:id="@+id/p6name" style="@style/ScoreText"
                    android:text="Player 6"
                    android:layout_gravity="center_vertical" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/p6color"
                    android:background="#fff57672" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->


</FrameLayout>